Fixed flip cards z-index on ff

--- a/static_content/css/style.css
+++ b/static_content/css/style.css
@@ -108,6 +108,7 @@ h2{
 	transform-style: preserve-3d;
 	display: block;
 	position: absolute;
+	z-index: -1;
 }
 
 .white{
